src/components/create/create.css
/*    Flip controls   */
.card-outer {
  width: 98vw;
  height: 66vw;
  padding: 0;
  margin: auto;
  position: relative;
  background-color: transparent;
  perspective: 2000px;
  margin-bottom: 15px;
}

.card-front {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.9s;
  transform-style: preserve-3d;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
}

.card-back {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.9s;
  transform-style: preserve-3d;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
  transform: rotateY(180deg);
}

/*    Card front    */
.card-image-container {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  z-index: 2;
}

.card-flip-instruction {
  opacity: 0.7;
  font-size: 3vh;
  color: white;
  border-radius: 5%;
  background-color: #4d808b;
  padding: 5px;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.card-image-container img {
  height: 100%;
  width: 100%;
}

.photo-credit {
  padding: 0 4px 0;
  font-size: 1.3vh;
  background-color: white;
  position: absolute;
  margin: 0;
  left: 3px;
  bottom: 3px;
}

.photo-credit a {
  text-decoration: none;
}

/*    Card back   */
.card-back-container {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  padding: 3%;
  background-color: white;
  transform: rotateY(180deg);
  z-index: 100;
  display: flex;
}

.card-message {
  word-break: break-word;
  font-family: 'Indie Flower', cursive;
  font-size: 2.8vmin;
  padding-right: 1.5vw;
  margin-top: 1vh;
  border-right: 2.5px dotted rgb(80, 80, 80);
  flex: 2;
}

.card-emails-container {
  flex: 1;
  margin: 16% 0 0 2%;
}

.card-email {
  border-bottom: 1px solid black;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.card-email p {
  font-size: 2vmin;
  margin: 1.2vw auto;
}

.email-delete-btn {
  border: none;
  background-color: #efeeeb;
}

.stamp-icon {
  width: 24%;
  height: 22%;
  position: absolute;
  right: 3%;
}

/*    Preview, Save, Send buttons   */
.card-btn-wrapper {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  max-width: 400px;
  margin: 0 auto 15px;
}

.create-page-btn {
  padding: 10px;
  background-color: #1a5666;
}

.create-page-btn a,
.create-page-btn {
  color: white;
  font-size: 20px;
  text-decoration: none;
}

/*    Image, Message, Recipient forms   */
.create-page-form-wrapper {
  width: 98%;
  border: 2px lightgrey solid;
  border-radius: 7px;
  padding: 10px;
  margin: 0 auto 5px;
}

.create-page-form-row {
  display: flex;
  padding: 10px 10px 10px 0;
}

.create-page-form-row input {
  flex: 3;
  margin-right: 10px;
}

.create-page-form-row button,
.message-textarea {
  flex: 1;
}

.create-page-form-row button:nth-child(odd) {
  flex: 1;
  margin-left: 20px;
}

.create-page-form-wrapper label {
  font-family: 'Monda', sans-serif;
  font-weight: 100;
}

.recipient-link {
  font-size: 12px;
  margin: 0 0 5px;
}

.recipient-link-textarea {
  width: 100%;
  height: 18px;
  padding: 1px 0 0 8px;
}

/*    Saved cards   */
.card-collection-container {
  max-width: 750px;
  margin: 30px auto;
  border: 2px lightgrey solid;
  border-radius: 1%;
  margin-bottom: 20px;
  position: relative;
  min-height: 150px;
}

.collection-cards {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin: 20px auto;
}

.card-collection-container-label {
  font-family: 'Monda', sans-serif;
  position: absolute;
  margin: 0;
  top: 0;
  left: 10px;
  font-weight: 200;
  background-color: #efeeeb;
  transform: translate(0, -50%);
}

.collection-message {
  font-size: 2.5vh;
  text-align: center;
  font-weight: 200;
}

.saved-card {
  display: flex;
  position: relative;
  margin: 2vh 1vh;
  box-shadow: 5px 10px 18px #888888;
}

.saved-card-edit-instruction {
  margin: 0;
  opacity: 0.8;
  font-size: 1.5vh;
  color: white;
  background-color: #4d808b;
  padding: 5px;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.delete-card-btn {
  position: absolute;
  top: 0;
  right: 0;
}

.error-message {
  text-align: center;
  color: red;
  font-size: 0.8em;
  margin: 0;
  transform: translate(0, -50%);
}

/* Delete card modal   */
.delete-card-modal {
  height: 25vh;
  width: 60vw;
  padding: 2vh;
  text-align: center;
  font-size: 2vh;
  background-color: white;
  border: 1px solid gray;
  border-radius: 5px;
  position: fixed;
  right: 50%;
  top: 50%;
  transform: translate(50%, -50%);
}

.delete-card-modal button {
  margin: 0 10px 10px 0;
  font-size: 2vh;
}

.delete-card-modal button:nth-child(even) {
  background-color: lightgrey;
}

.delete-card-modal button:nth-child(odd) {
  color: white;
  background-color: red;
}

@media only screen and (min-width: 568px) {
  .create-page-form-wrapper {
    width: 80vw;
  }

  .card-outer {
    width: 80vw;
    height: 53vw;
  }

  .card-email p {
    margin: 7px auto;
  }

  .delete-card-modal {
    width: 50vw;
  }
}

@media only screen and (min-width: 900px) {
  .create-page-form-wrapper {
    width: 750px;
  }

  .card-outer {
    width: 750px;
    height: 495px;
  }

  /*  Hover to show flip instructions */
  .card-image-container:hover {
    opacity: 0.8;
    cursor: pointer;
  }

  .card-back-container:hover {
    cursor: pointer;
  }

  .card-flip-instruction {
    display: none;
  }

  .card-image-container:hover > .card-flip-instruction {
    display: block;
  }

  .saved-card:hover {
    opacity: 0.8;
    cursor: pointer;
  }

  .saved-card-edit-instruction {
    display: none;
  }

  .saved-card:hover > .saved-card-edit-instruction {
    display: block;
  }

  .delete-card-modal {
    width: 25vw;
  }
}

